--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Coffe Junkie</title>
   </head>
   <body>
-    <h1>Hello world!</h1>
+    <h1>Hello world! Hi how are you?</h1>
   </body>
 </html>
