--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Coffe Junkie</title>
   </head>
   <body>
-    <h1>Hello world! Hi how are you?</h1>
+    <img src="images/kawka.png" alt="" width="200px" />
+    <h1>Coffee Junkie</h1>
+    <br />
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="numbers.html">Numbers</a></li>
+      <li><a href="contact.html">Contact us!</a></li>
+    </ul>
   </body>
 </html>
