--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
       <li><a href="numbers.html">Numbers</a></li>
       <li><a href="contact.html">Contact us!</a></li>
     </ul>
+    <img src="images/kawa.jpg" alt="" width="1690px" />
+    <h1>Contact us</h1>
+    <p>Name <input type="name" /></p>
+    <p>Email <input type="email" placeholder="email@xyz.com" /></p>
   </body>
 </html>
