--- a/index.html
+++ b/index.html
@@ -18,7 +18,21 @@
     </ul>
     <img src="images/kawa.jpg" alt="" width="1690px" />
     <h1>Contact us</h1>
-    <p>Name <input type="name" /></p>
-    <p>Email <input type="email" placeholder="email@xyz.com" /></p>
+    <form action="">
+      <p>Name</p>
+      <input name="name" type="name" id="name" />
+      <p>Email</p>
+      <input name="email" type="email" placeholder="email@xyz.com" />
+      <br />
+      <p>What is the matter you are contacting us with?</p>
+      <textarea name="description" id="" cols="30" rows="10"></textarea>
+      <br />
+      <input type="submit" />
+    </form>
+    <br />
+    <br />
+    <p>Copyright &copy; 2022</p>
+    <a href="#top"> <u>Back to top</u></a>
+    <br />
   </body>
 </html>
