--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
     <h1>Contact us</h1>
     <form action="">
       <p>Name</p>
-      <input name="name" type="name" id="name" />
+      <input name="name" type="name" id="name">
       <p>Email</p>
-      <input name="email" type="email" placeholder="email@xyz.com" />
-      <br />
+      <input name="email" type="email" placeholder="email@xyz.com">
+      <br>
       <p>What is the matter you are contacting us with?</p>
       <textarea name="description" id="" cols="30" rows="10"></textarea>
-      <br />
-      <input type="submit" />
+      <br>
+      <input type="submit">
     </form>
-    <br />
-    <br />
+    <br>
+    <br>
     <p>Copyright &copy; 2022</p>
     <a href="#top"> <u>Back to top</u></a>
-    <br />
+    <br>
   </body>
 </html>
