--- a/numbers.html
+++ b/numbers.html
@@ -1,10 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <title>Coffee Junkie Numbers</title>
   </head>
-  <body></body>
+  <body>
+    <img src="images/kawka.png" alt="" width="200px" >
+    <h1>Coffee Junkie</h1>
+    <br />
+    <ul>
+      <li>
+        <a href="index.html">Home</a>
+      </li>
+      <li>
+        <a href="about.html">About</a>
+      </li>
+      <li>
+        <a href="numbers.html">Numbers</a>
+      </li>
+      <li>
+        <a href="contact.html">Contact us!</a>
+      </li>
+    </ul>
+    <img src="images/kawa.jpg" alt="" width="1690px" >
+    <br>
+    <br>
+    <br>
+    <h3>Our stores</h3>
+    <table>
+      <tr>
+        <th><strong>City</strong></th>
+        <th><strong>Chicago</strong></th>
+        <th><strong>New York</strong></th>
+        <th><strong>Los Angeles</strong></th>
+      </tr>
+      <tr>
+        <th>Orders</th>
+        <th>125</th>
+        <th>250</th>
+        <th>500</th>
+      </tr>
+      <tr>
+        <th>Profit</th>
+        <th>$ 10,000</th>
+        <th>$ 20,000</th>
+        <th>$ 30,00</th>
+      </tr>
+    </table>
+
+  </body>
 </html>
