--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <li><a href="numbers.html">Numbers</a></li>
       <li><a href="contact.html">Contact us!</a></li>
     </ul>
-    <img src="images/kawa.jpg" alt="" width="1690px" />
+    <img src="images/kawa.jpg" alt="" width="100%" />
     <h1>Contact us</h1>
     <form action="">
       <p>Name</p>
