--- a/numbers.html
+++ b/numbers.html
@@ -24,7 +24,7 @@
         <a href="contact.html">Contact us!</a>
       </li>
     </ul>
-    <img src="images/kawa.jpg" alt="" width="1690px" >
+    <img src="images/kawa.jpg" alt="" width="100%" >
     <br>
     <br>
     <br>
